adding completed DESeq2 and edgeR analysis notebooks and initial version of plot generating notebook

--- a/validation_DESeq2.Rmd
+++ b/validation_DESeq2.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Prostate Cancer Secondary Analysis With Validation Cohort"
-subtitle: "Using `DESeq2` For DE Analysis"
 author: "Flemming Wu"
+subtitle: "Using `DESeq2` For DE Analysis"
 ---
 
 ```{r setup, include=F}
@@ -13,6 +13,7 @@ if (Sys.info()["sysname"] == "Windows") {
 knitr::opts_chunk$set(fig.width=6, fig.height=4)
 ```
 
+Load in required libraries
 
 ```{r load libs, message=F}
 library(tidyverse)
@@ -29,10 +30,16 @@ library(DESeq2)
 library(patchwork)
 ```
 
+## Load in and prepare data
+
+Load in excel file to map samples to type
+
 ```{r}
 key <- read_xlsx("./Manifest/P_Ca_sec_manifest_030923.xlsx")
 head(key)
 ```
+
+Read in one count table
 
 ```{r read in one file}
 test.file <- read.table(
@@ -41,6 +48,8 @@ test.file <- read.table(
 head(test.file)
 nrow(test.file)
 ```
+
+Read all count tables into R and prepare genes x samples count matrix
 
 ```{r read in counts from Count Table directory}
 ## I have checked, and all files should have same the same genes listed in the same order
@@ -61,7 +70,7 @@ names(df) <- ifelse(names(df) %in% key$`African American`, paste(names(df), "Afr
 
 ```{r view prepared dataset}
 #dim(df) # 58,785 genes and 59 samples
-df
+head(df)[,1:5]
 ```
 
 Filter out lowly expressed genes
@@ -76,7 +85,9 @@ df <- df[apply(df, 1, function(x) length(x[x>5])>=15),]
 Left with 27,786 genes after the filtering
 
 
-Exploratory data analysis
+### Exploratory data analysis
+
+Create expression set object from count matrix
 
 ```{r create expression set object}
 x <- names(df) %>% str_extract("Afr$|Cau$") %>% as.factor()
@@ -84,7 +95,7 @@ set <- newSeqExpressionSet(as.matrix(df), phenoData = data.frame(x, row.names = 
 set
 ```
 
-```{r plot RLE and PCA prior to normalization, fig.width=12}
+```{r plot RLE and PCA prior to normalization, fig.width=12, fig.height=6}
 colors <- brewer.pal(3, "Set1")
 par(mfrow=c(1,2))
 plotRLE(set, outline = FALSE, ylim = c(-4,4), col = colors[x])
@@ -92,15 +103,17 @@ plotPCA(set, col = colors[x], cex = 0.7)
 mtext("Before Normalization", side = 3, line = -1, outer = TRUE)
 ```
 
-Normalize
+### Initial data normalization
 
-```{r upper quartile normalization, fig.width=12}
+```{r upper quartile normalization, fig.width=12, fig.height=6}
 set <- betweenLaneNormalization(set, which = "upper")
 par(mfrow=c(1,2))
 plotRLE(set, outline = FALSE, ylim = c(-4,4), col = colors[x])
 plotPCA(set, col = colors[x], cex = 0.7)
 mtext("After Normalization", side = 3, line = -1, outer = TRUE)
 ```
+
+### Remove covariates that are not of interest in comparison (AA vs CA)
 
 #### `RUVSeq` offers 3 methods for removing unwanted variation in RNASeq analysis
 
@@ -110,7 +123,7 @@ mtext("After Normalization", side = 3, line = -1, outer = TRUE)
 
 3. `RUVr`: Estimating the factors of unwanted variation using residuals
 
-I will try all three methods and evaluate which normalization method separates African American samples and Caucasian samples by visualizing the separation on the PCA space.
+I will try all three methods and evaluate which normalization method separates African American samples and Caucasian samples *best* by visualizing the separation on the PCA space.
 
 
 #### `RUVg`
@@ -200,17 +213,17 @@ Using k = 9 from `RUVr` gives the clearest separation between groups on the firs
 
 Remove unwanted variation with pearson residuals.
 
-```{r RUVg, fig.width=12}
-set2 <- RUVr(set, rownames(set), k=8, res)
+```{r RUVg, fig.width=12, fig.height=6}
+set2 <- RUVr(set, rownames(set), k=9, res)
 par(mfrow=c(1,2))
 plotRLE(set2, outline = FALSE, ylim = c(-4,4), col = colors[x])
 plotPCA(set2, col = colors[x], cex = 0.7)
 mtext("After normalizing with deviance residuals", side = 3, line = -1, outer = TRUE)
 ```
 
-Run final DEG analysis with `DESeq2`
+### Run final DEG analysis with `DESeq2`
 
-```{r run DESeq2}
+```{r run DESeq2, message=FALSE}
 dds <- DESeqDataSetFromMatrix(countData = counts(set2), colData = pData(set2), design = ~W_1 + x)
 dds <- DESeq(dds)
 res <- results(dds)
@@ -222,7 +235,7 @@ res <- res[res$baseMean > 50,] # filter out lowly expressed genes to reduce nois
 ```{r view DESeq2 results}
 #res
 df.res <- as.data.frame(res) %>% arrange(pvalue)
-df.res
+head(df.res, n = 10)
 ```
 
 
@@ -247,14 +260,19 @@ df.res.sym <- addGeneSym(df.res)
 df.res.sym <- arrange(df.res.sym, pvalue)
 ```
 
+##### Positive logFC means upregulated in Caucasian Americans compared to African Americans and vice versa for negative logFC
+
 ```{r view DESeq2 results with gene symbol}
-# positive logFC means upregulated in Caucasian Americans compared to African Americans and vice versa for negative logFC
-df.res.sym
+
+head(df.res.sym, n = 20) 
 ```
 
-Volcano PLot
 
-```{r volcano plot}
+### Visualization of significant genes
+
+Volcano Plot
+
+```{r volcano plot, fig.width=10, fig.height=9}
 EnhancedVolcano(df.res.sym, x = "log2FoldChange", y = "pvalue", lab = df.res.sym$SYMBOL,
                 title = "Comparison: African American x Caucasian American - DESeq2",
                 subtitle = "p-value cutoff: 0.05 | log2-fold change cutoff: 1",
@@ -262,7 +280,7 @@ EnhancedVolcano(df.res.sym, x = "log2FoldChange", y = "pvalue", lab = df.res.sym
 )
 ```
 
-```{r MA plot}
+```{r MA plot,fig.width=12, fig.height=7}
 to.plot <- df.res.sym %>%
   mutate(baseMean = log2(baseMean)) %>%
   dplyr::rename(baseMeanLog2 = baseMean)
@@ -282,7 +300,11 @@ ggmaplot(data = to.plot,
            )
 ```
 
-#### GSEA
+### Gene set enrichment analysis
+
+GSEA requires a *ranked* list of all genes. There is no need to separate up and downregulated genes, or filter the gene list, as the ranking should place unsignificant genes in the middle of the ranked list.
+
+However, there is no set rule for ranking the list of genes. The method that I will use to rank genes is to multiply the log fold-change by the -log10 p-value. This ranking allows one to take into account the *change* in gene expression between the two groups, as well as the significance of the gene.
 
 ```{r prepare ranked gene list}
 ranked.gene.list <- df.res %>%
@@ -298,36 +320,35 @@ ranked.gene.list <- df.res %>%
 gsea.go <- gseGO(geneList = ranked.gene.list, OrgDb = org.Hs.eg.db, keyType = "ENSEMBL", minGSSize = 10,
       maxGSSize = 500, nPermSimple = 10000, pvalueCutoff = 0.05, eps = 1e-300, verbose = F)
 
-head(gsea.go)
-```
-
-```{r}
-gsea.go@result
+#head(gsea.go)
 ```
 
 GSEA plot for top enriched pathway
 
-```{r}
+```{r fig.width=10, fig.height=10}
 gseaplot2(gsea.go, geneSetID = 1, title = gsea.go$Description[1], pvalue_table = TRUE)
 ```
 
-```{r}
+```{r include=FALSE, eval=FALSE}
 gseaplot(gsea.go, geneSetID = 1, title = gsea.go$Description[1])
 ```
 
 
 GSEA plot for top 5 enriched pathways
 
-```{r}
-gseaplot2(gsea.go, geneSetID = 1:5, pvalue_table = TRUE)
+```{r fig.width=10, fig.height=10}
+gseaplot2(gsea.go, geneSetID = 1:5, pvalue_table = TRUE, title = "GSEA plot - Top 5 Pathways in Caucasian Americans")
 ```
 
-```{r fig.height=8}
-dotplot(gsea.go, showCategory = 30)
+```{r fig.height=12, fig.width=10}
+dotplot(gsea.go, showCategory = 30) + ggtitle("GSEA Identified Top 30 Upregulated GO Pathways in Caucasian Americans")
 ```
 
+### Overrepresentation analysis
 
-#### GO Enrichment analysis with filtered gene lists
+GO Enrichment analysis with filtered gene lists
+
+split gene lists into up and downregulated filtered by pvalue cutoff
 
 ```{r split gene lists into up and downregulated filtered by pvalue cutoffs}
 p.05.up <- filter(df.res.sym, (pvalue < 0.05) & (log2FoldChange > 0))
@@ -369,22 +390,22 @@ names(ego.res) <- names(filtered.res)
 ego.res <- lapply(ego.res, pairwise_termsim)
 ```
 
-```{r}
-treeplot(ego.res$fdr.1.up)
+```{r fig.width=15, fig.height=12}
+treeplot(ego.res$fdr.1.up) + labs(title = "Upregulated Caucasian American GO: BP Pathways Clustered By Term Similarity", subtitle = "Sig. Genes Cutoff Used: FDR 10%")
 ```
 
-```{r}
-treeplot(ego.res$fdr.1.dn)
+```{r fig.width=15, fig.height=12}
+treeplot(ego.res$fdr.1.dn) + labs(title = "Upregulated African American GO: BP Pathways Clustered By Term Similarity", subtitle = "Sig. Genes Cutoff Used: FDR 10%")
 ```
 
-```{r barplots of top 20 pathways, fig.width=8, fig.height=6}
+```{r barplots of top 20 pathways, fig.width=16, fig.height=14}
 wrap_plots(
   barplot(ego.res$fdr.1.up, showCategory=20) + ggtitle("Upreg in Caucasian American"),
   barplot(ego.res$fdr.1.dn, showCategory=20) + ggtitle("Upreg in African American")
 )
 ```
 
-```{r fig.height=2, fig.width=10}
+```{r fig.height=2, fig.width=10, eval=F, include=F}
 heatplot(ego.res$fdr.1.up, showCategory = 5)
 ```
 
@@ -392,7 +413,7 @@ heatplot(ego.res$fdr.1.up, showCategory = 5)
 
 #### KEGG Enrichment analysis with filtered gene lists
 
-```{r}
+```{r, eval=F, include=F}
 mkk <- enrichMKEGG(gene = bitr(rownames(filtered.res$p.05.up), fromType = "GENEID",
                                toType = "ENTREZID", OrgDb = EnsDb.Hsapiens.v86) %>% pull(ENTREZID),
                    keyType = 'ncbi-geneid',
