--- a/making-figures.Rmd
+++ b/making-figures.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(fig.width=12, fig.height=12, echo=TRUE)
 
 ## Load libraries and set up data
 
-```{r}
+```{r message=F}
 library(tidyverse)
 library(RUVSeq)
 library(readxl)
@@ -29,6 +29,9 @@ library(clusterProfiler)
 library(enrichplot)
 library(DESeq2)
 library(patchwork)
+library(openxlsx)
+library(gridExtra)
+library(msigdbr)
 ```
 
 ```{r}
@@ -94,11 +97,18 @@ res <- results(dds)
 res <- na.omit(res)
 res <- res[res$baseMean > 50,] # filter out lowly expressed genes to reduce noise
 
-df.res.ca <- as.data.frame(res) %>% arrange(pvalue)
+df.res <- as.data.frame(res) %>% arrange(pvalue)
 
-df.res.ca.sym <- addGeneSym(df.res.ca)
-df.res.ca.sym <- arrange(df.res.ca.sym, pvalue)
+df.res.sym <- addGeneSym(df.res)
+df.res.sym <- arrange(df.res.sym, pvalue)
 ```
+
+```{r}
+if (!file.exists("./gene-lists/full-gene-list.xlsx")) {
+  write.xlsx(rownames_to_column(df.res.sym), "./gene-lists/full-gene-list.xlsx")
+}
+```
+
 
 ---
 
@@ -106,15 +116,17 @@ df.res.ca.sym <- arrange(df.res.ca.sym, pvalue)
 
 ```{r}
 p1 <- EnhancedVolcano(df.res.sym, x = "log2FoldChange", y = "pvalue", lab = df.res.sym$SYMBOL,
-                title = "Comparison: African American x Caucasian American - DESeq2",
+                title = "African American (reference) vs Caucasian American (comparison) - DESeq2",
                 subtitle = "p-value cutoff: 0.05 | log2-fold change cutoff: 1",
                 col = c("gray", "#4bd0fe", "red1", "#fef84b")
 )
 
+p1
+
 if (!file.exists('./figures/volcano_plot.jpeg')) {
   ggsave(
     filename='./figures/volcano_plot.jpeg',
-    plot=p1, dpi=800, width = 9, height = 11,
+    plot=p1, dpi=800, width = 20, height = 20,
     units = "in"
   )
 }
@@ -129,23 +141,25 @@ to.plot <- df.res.sym %>%
   dplyr::rename(baseMeanLog2 = baseMean)
   
 p2 <- ggmaplot(data = to.plot, 
-           main = "Comparison: African American x Caucasian American - DESeq2",
+           main = "African American (reference) vs Caucasian American (comparison) - DESeq2",
            fdr = 0.1, fc = 2, size = 0.4,
            palette = c("#7AFF96", "#FF7A7A", "darkgray"),
            genenames = to.plot$SYMBOL,
-           legend = "top", top = 30,
+           legend = "top", top = 50,
            select.top.method = "padj",
            font.label = c("bold", 9), label.rectangle = FALSE,
            font.legend = "bold",
            font.main = "bold",
            xlab = "log2 Base Mean",
            ggtheme = ggplot2::theme_minimal()
-           )
+           ) + labs(subtitle = "Top 50 p-adjusted genes labeled")
+
+p2
 
 if (!file.exists('./figures/ma_plot.jpeg')) {
   ggsave(
     filename='./figures/ma_plot.jpeg',
-    plot=p2, dpi=800, width = 11, height = 9,
+    plot=p2, dpi=800, width = 20, height = 15,
     units = "in"
   )
 }
@@ -154,39 +168,8 @@ if (!file.exists('./figures/ma_plot.jpeg')) {
 
 ## GSEA
 
-First, reverse order of factors when performing DE analysis, so that upregulated genes in AA are on top of list
-
-```{r warning=F, message=F}
-x <- names(df) %>% str_extract("Afr$|Cau$") %>% as.factor() %>% fct_rev()
-set <- newSeqExpressionSet(as.matrix(df), phenoData = data.frame(x, row.names = colnames(df)))
-
-set <- betweenLaneNormalization(set, which = "upper")
-
-design <- model.matrix(~x, data=pData(set))
-y <- DGEList(counts=counts(set), group=x)
-y <- calcNormFactors(y, method="upperquartile")
-y <- estimateGLMCommonDisp(y, design)
-y <- estimateGLMTagwiseDisp(y, design)
-fit <- glmFit(y, design)
-res <- residuals(fit, type="deviance")
-
-set2 <- RUVr(set, rownames(set), k=9, res)
-
-dds <- DESeqDataSetFromMatrix(countData = counts(set2), colData = pData(set2), design = ~W_1 + x)
-dds <- DESeq(dds)
-res <- results(dds)
-res <- na.omit(res)
-res <- res[res$baseMean > 50,] # filter out lowly expressed genes to reduce noise
-
-df.res.aa <- as.data.frame(res) %>% arrange(pvalue)
-
-df.res.aa.sym <- addGeneSym(df.res.aa)
-df.res.aa.sym <- arrange(df.res.aa.sym, pvalue)
-```
-
-
-```{r warning=F}
-ranked.gene.list.aa <- df.res.aa %>%
+```{r}
+ranked.gene.list <- df.res %>%
   mutate(rank = log2FoldChange * -log10(pvalue)) %>% ## here I rank by multiplying logFC by -log10(pvalue) to give more weight to more significant genes
   rownames_to_column(var = "ENSEMBL") %>% 
   mutate(ENSEMBL = str_replace(ENSEMBL, ".[0-9]{1,2}$", "")) %>% 
@@ -194,27 +177,104 @@ ranked.gene.list.aa <- df.res.aa %>%
   arrange(-stat) %>%
   tibble::deframe()
 
-ranked.gene.list.ca <- df.res.ca %>%
-  mutate(rank = log2FoldChange * -log10(pvalue)) %>% ## here I rank by multiplying logFC by -log10(pvalue) to give more weight to more significant genes
-  rownames_to_column(var = "ENSEMBL") %>% 
-  mutate(ENSEMBL = str_replace(ENSEMBL, ".[0-9]{1,2}$", "")) %>% 
-  dplyr::select(ENSEMBL, stat) %>%
-  arrange(-stat) %>%
-  tibble::deframe()
-
-
-gsea.go.aa <- gseGO(geneList = ranked.gene.list.aa, OrgDb = org.Hs.eg.db, keyType = "ENSEMBL", minGSSize = 10,
-      maxGSSize = 500, nPermSimple = 10000, pvalueCutoff = 0.05, eps = 1e-300, verbose = F)
-
-gsea.go.ca <- gseGO(geneList = ranked.gene.list.ca, OrgDb = org.Hs.eg.db, keyType = "ENSEMBL", minGSSize = 10,
+gse.go <- gseGO(geneList = ranked.gene.list, OrgDb = org.Hs.eg.db, keyType = "ENSEMBL", minGSSize = 10,
       maxGSSize = 500, nPermSimple = 10000, pvalueCutoff = 0.05, eps = 1e-300, verbose = F)
 ```
 
+
 ```{r}
-gseaplot2(gsea.go.ca, geneSetID = 1:5, pvalue_table = TRUE, title = "GSEA plot - Top 5 Pathways in Caucasian Americans")
+if (!file.exists("./pathways/GSEA_GO_pathways.xlsx")) {
+  write.xlsx(as.data.frame(gse.go), "./pathways/GSEA_GO_pathways.xlsx")
+}
 ```
 
 ```{r}
-gseaplot2(gsea.go.aa, geneSetID = 1:5, pvalue_table = TRUE, title = "GSEA plot - Top 5 Pathways in African Americans")
+filter(gse.go, enrichmentScore > 0) %>%
+  as.data.frame()
+```
+
+```{r}
+gseaplot2(gse.go, geneSetID = 1:10, pvalue_table = TRUE, title = "GSEA plot - Top 10 Upregulated Pathways in Caucasian Americans")
+
+if (!file.exists("./figures/GSEA_upregulated_ca_plot.jpeg")) {
+  jpeg(file="./figures/GSEA_upregulated_ca_plot.jpeg", res = 800, width = 15, height = 15, units = "in")
+  gseaplot2(gse.go, geneSetID = 1:10, pvalue_table = TRUE, title = "GSEA plot - Top 10 Upregulated Pathways in Caucasian Americans")
+  dev.off()
+}
+```
+
+```{r}
+gseaplot2(filter(gse.go, enrichmentScore < 0), geneSetID = 1:10, pvalue_table = TRUE, title = "GSEA plot - Top 10 Upregulated Pathways in African Americans")
+
+if (!file.exists("./figures/GSEA_upregulated_aa_plot.jpeg")) {
+  jpeg(file="./figures/GSEA_upregulated_aa_plot.jpeg", res = 800, width = 15, height = 15, units = "in")
+  gseaplot2(filter(gse.go, enrichmentScore < 0), geneSetID = 1:10, pvalue_table = TRUE, title = "GSEA plot - Top 10 Upregulated Pathways in African Americans")
+  dev.off()
+}
+```
+
+```{r}
+dp <- dotplot(gse.go, split=".sign", showCategory = 20) + facet_grid(.~.sign) + labs(title = "African American (reference) vs Caucasian American (comparison)", subtitle = "GSEA - GO:BP")
+
+if(!file.exists("./figures/GSEA_dotplot.jpeg")) {
+  ggsave(filename="./figures/GSEA_dotplot.jpeg", dp, dpi = 800, width = 12, height = 15, units = "in")
+}
+```
+
+```{r}
+cnp <- cnetplot(setReadable(gse.go, 'org.Hs.eg.db', 'auto'), showCategory = 10)
+
+if(!file.exists("./figures/GSEA_cnetplot.jpeg")) {
+  ggsave(filename="./figures/GSEA_cnetplot.jpeg", cnp, dpi = 800, width = 30, height = 30, units = "in")
+}
+```
+
+```{r message=F}
+rp <- ridgeplot(gse.go) + 
+  labs(x = "enrichment distribution") + 
+  scale_fill_gradient(low = "#e6f43c", high = "#ff4a4a") + 
+  labs(title = "African American (reference) vs Caucasian American (comparison)", subtitle = "GSEA - GO:BP")
+
+if(!file.exists("./figures/GSEA_ridgeplot.jpeg")) {
+  ggsave(filename="./figures/GSEA_ridgeplot.jpeg", rp, dpi = 800, width = 15, height = 15, units = "in")
+}
+```
+
+```{r}
+gse.go <- pairwise_termsim(gse.go)
+emp <- emapplot(gse.go, cex_category=1.5, showCategory = 50)
+
+if(!file.exists("./figures/GSEA_emapplot.jpeg")) {
+  ggsave(filename="./figures/GSEA_emapplot.jpeg", emp, dpi = 800, width = 20, height = 20, units = "in")
+}
+```
+
+```{r}
+usp <- upsetplot(gse.go, n = 15)
+
+if(!file.exists("./figures/GSEA_upsetplot.jpeg")) {
+  ggsave(filename="./figures/GSEA_upsetplot.jpeg", usp, dpi = 800, width = 20, height = 10, units = "in")
+}
+```
+
+
+```{r}
+# separate gene lists
+p.05.up <- filter(df.res.sym, (pvalue < 0.05) & (log2FoldChange > 0))
+p.05.dn <- filter(df.res.sym, (pvalue < 0.05) & (log2FoldChange < 0))
+p.01.up <- filter(df.res.sym, (pvalue < 0.01) & (log2FoldChange > 0))
+p.01.dn <- filter(df.res.sym, (pvalue < 0.01) & (log2FoldChange < 0))
+p.001.up <- filter(df.res.sym, (pvalue < 0.001) & (log2FoldChange > 0))
+p.001.dn <- filter(df.res.sym, (pvalue < 0.001) & (log2FoldChange < 0))
+fdr.1.up <- filter(df.res.sym, (padj < 0.1) & (log2FoldChange > 0))
+fdr.1.dn <- filter(df.res.sym, (padj < 0.1) & (log2FoldChange < 0))
+
+filtered.res <- list("p.05.up" = p.05.up, "p.05.dn" = p.05.dn,
+                     "p.01.up" = p.01.up, "p.01.dn" = p.01.dn,
+                     "p.001.up" = p.001.up, "p.001.dn" = p.001.dn,
+                     "fdr.1.up" = fdr.1.up, "fdr.1.dn" = fdr.1.dn)
+if (!file.exists("./gene-lists/filtered_gene_lists.xlsx")) {
+  write.xlsx(filtered.res, file = "./gene-lists/filtered_gene_lists.xlsx") 
+}
 ```
 
